k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: labpulse
  namespace: labpulse
  labels:
    app: labpulse
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: labpulse
